<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.moataz.todos.ui.viewmodel.TodoEditingViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_new_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/edit_todo"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_habit_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:padding="8dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_new_todo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/todo_name"
                    android:inputType="text"
                    android:text="@={viewModel.todoTitle}"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_update_habit"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onUpdateTodoClicked()}"
                android:text="@string/update_habit"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_habit_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_habit_name" />

            <Button
                android:id="@+id/button_delete_habit"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-1dp"
                android:onClick="@{() -> viewModel.onDeleteTodoClicked()}"
                android:text="@string/delete_habit"
                android:textAllCaps="false"
                android:textColor="@color/teal_200"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_update_habit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_update_habit" />

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewModel.onCloseDialogClick()}"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_update_habit"
                app:layout_constraintEnd_toStartOf="@+id/button_update_habit"
                app:layout_constraintTop_toTopOf="@+id/button_update_habit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>